--- a/src/main.css
+++ b/src/main.css
@@ -10,6 +10,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .App {
@@ -17,6 +18,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 p{
